made some changes to bio and blog and posted my first blog

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Novela settings
 theme = "hugo-theme-novela"
-baseURL = "https://vedantwrites.netlify.app/"
+baseURL = "https://blog.vedant.cloud"
 languageCode = "en-us"
 title = "Vedant Writes"
 
