--- a/themes/hugo-theme-novela/config.yaml
+++ b/themes/hugo-theme-novela/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://example.com"
+baseURL: "https://blog.vedant.cloud"
 languageCode: "en-us"
-title: "Hugo Novela"
+title: "Vedant Writes"
 pygmentsstyle: 'monokai'
